...
  final String country;
  final String zipCode;
  final String? landmark;
  final bool isDefault;
  final AddressType type;

  Address({
    required this.id,
    required this.userId,
    required this.fullName,
    required this.phoneNumber,
    required this.addressLine1,
    this.addressLine2 = '',
...
