...
                          const Icon(
                            Icons.logout,
                            color: AppTheme.errorColor,
                          ),
                          const SizedBox(width: 8),
                          Text(
                            'Logout',
                            style: AppTheme.labelLarge.copyWith(
                              color: AppTheme.errorColor,
                              fontSize: 16,
                            ),
                          ),
                        ],
...
